# 3DGenomeHub

./: .env.example  .gitignore  README.md  build_exe.bat  pyproject.toml  requirements.txt  run.bat  run.py  run.sh  run_exe.py
.github/workflows/: update.yml
data/: sample-data.yml
docs/: architecture.md  curriculum.md  data_governance.md  roadmap.md
src/genome_literature/: __init__.py  __main__.py  analyzer.py  categorizer.py  cli.py  config.py  email_notifier.py  fetcher.py  pipeline.py  readme_generator.py  storage.py  summarizer.py  web_app.py
src/three_d_genome_hub/: __init__.py  cli.py  config.py  knowledge_base.py  models.py
src/three_d_genome_hub/api/: server.py
src/three_d_genome_hub/api/templates/: index.html
src/three_d_genome_hub/ingestion/: loader.py  schema.py
src/three_d_genome_hub/pipelines/: build_index.py  curate.py  update.py
src/three_d_genome_hub/utils/: embeddings.py  logging.py
templates/: email_digest.html
