[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "3d-genome-hub"
version = "2.0.0"
description = "Auto-updating literature tracker for 3D genome & deep learning research"
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0,<3.0",
    "typer>=0.12.3",
    "rich>=13.7.1",
    "jinja2>=3.1.3",
    "python-dotenv>=1.0.1",
    "schedule>=1.2.1",
]

[project.scripts]
genome-literature = "genome_literature.cli:app"

[tool.setuptools.packages.find]
where = ["src"]
